2006-03-31 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/DialogManageFlags.h,
	  include/GParted_Core.h,
	  include/Makefile.am,
	  include/Utils.h,
	  include/Win_GParted.h,
	  src/DialogManageFlags.cc,
	  src/GParted_Core.cc,
	  src/Makefile.am,
	  src/Win_GParted.cc: add 'flag management' (#330453)

2006-03-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Partition.h,
	  src/Partition.cc: added set_used() and operator!=
	* src/Dialog_Partition_Copy.cc,
	  src/GParted_Core.cc,
	  src/OperationCopy.cc,
	  src/Win_GParted.cc: it's now possible to copy from partition to
	  partition. (before this it was only possible to copy to unallocated
	  space)

2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: fixed another minor memleak (yeah i'm playing
	  with valgrind ;) )

2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: it appeared i had to free the result of
	  ped_partition_get_path in order to prevent a memleak.

2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/OperationCopy.cc: name a copied partition 'copy of <source>'.

2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: bumped to gparted-0.2.3
	  ===================================================

2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: removed testdata
	
2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* trivial cleanups

2006-03-27 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/TreeView_Detail.h,
	  src/TreeView_Detail.cc: made icon behaviour more intelligent
	* src/GParted_Core.cc: small improvement in open_device_and_disk()

2006-03-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: made some small adjustments to devicechecks.

2006-03-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: sort devices alphabetically by default.

2006-03-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
