@@ -1,4 +1,10 @@
 2006-03-31 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: let create_empty_partition() return a boolean
+	  instead of an integer.
+
+2006-03-31 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/DialogManageFlags.h,
 	  include/GParted_Core.h,
